adding jpg to index.html and uploading jpeg1.jpg

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	
 	<body>
 	
-		<span style="color:#ff0000">TEST 1</span>
-	
+		<span style="color:#666666;font-family:sans-serif;">TEST 1</span>
+	<br>
+	<img src="jpeg1.jpg">
 	</body>
 	
 </html>
